build/log/idf_py_stdout_output_6664
[1/11] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D D:\Sotatek\espDev\Espressif\frameworks\esp-idf-v5.1\examples\provisioning\sample_project\build\bootloader\esp-idf\esptool_py && D:\Sotatek\espDev\Espressif\python_env\idf5.1_py3.11_env\Scripts\python.exe D:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 D:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/examples/provisioning/sample_project/build/bootloader/bootloader.bin"
Bootloader binary size 0x66e0 bytes. 0x920 bytes (8%) free.
[2/9] Building C object esp-idf/sht3x_sensor_/CMakeFiles/__idf_sht3x_sensor_.dir/source/bee_Sht3x.c.obj
FAILED: esp-idf/sht3x_sensor_/CMakeFiles/__idf_sht3x_sensor_.dir/source/bee_Sht3x.c.obj 
ccache D:\Sotatek\espDev\Espressif\tools\xtensa-esp32-elf\esp-12.2.0_20230208\xtensa-esp32-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"HEAD-HASH-NOTFOUND\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/examples/provisioning/sample_project/build/config -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/examples/provisioning/sample_project/library/sht3x_sensor_/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/newlib/platform_include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/freertos/FreeRTOS-Kernel/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/freertos/esp_additions/include/freertos -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/freertos/esp_additions/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/freertos/esp_additions/arch/xtensa/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/esp_hw_support/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/esp_hw_support/include/soc -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/esp_hw_support/include/soc/esp32 -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/esp_hw_support/port/esp32/. -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/esp_hw_support/port/esp32/private_include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/heap/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/log/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/soc/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/soc/esp32 -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/soc/esp32/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/hal/esp32/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/hal/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/hal/platform_port/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/esp_rom/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/esp_rom/include/esp32 -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/esp_rom/esp32 -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/esp_common/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/esp_system/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/esp_system/port/soc -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/esp_system/port/include/private -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/xtensa/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/xtensa/esp32/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/lwip/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/lwip/include/apps -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/lwip/include/apps/sntp -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/lwip/lwip/src/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/lwip/port/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/lwip/port/freertos/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/lwip/port/esp32xx/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/lwip/port/esp32xx/include/arch -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/deprecated -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/analog_comparator/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/dac/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/gpio/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/gptimer/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/i2c/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/i2s/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/ledc/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/mcpwm/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/parlio/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/pcnt/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/rmt/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/sdio_slave/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/sdmmc/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/sigma_delta/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/spi/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/temperature_sensor/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/touch_sensor/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/twai/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/uart/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/usb_serial_jtag/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/driver/touch_sensor/esp32/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/esp_pm/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/components/esp_ringbuf/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=D:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/examples/provisioning/sample_project=. -fmacro-prefix-map=D:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/sht3x_sensor_/CMakeFiles/__idf_sht3x_sensor_.dir/source/bee_Sht3x.c.obj -MF esp-idf\sht3x_sensor_\CMakeFiles\__idf_sht3x_sensor_.dir\source\bee_Sht3x.c.obj.d -o esp-idf/sht3x_sensor_/CMakeFiles/__idf_sht3x_sensor_.dir/source/bee_Sht3x.c.obj -c D:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/examples/provisioning/sample_project/library/sht3x_sensor_/source/bee_Sht3x.c
D:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/examples/provisioning/sample_project/library/sht3x_sensor_/source/bee_Sht3x.c: In function 'sht3x_start_measurement':
D:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/examples/provisioning/sample_project/library/sht3x_sensor_/source/bee_Sht3x.c:174:10: error: implicit declaration of function 'sht3x_send_command' [-Werror=implicit-function-declaration]
  174 |     if (!sht3x_send_command(dev, SHT3x_MEASURE_CMD[mode][repeat]))
      |          ^~~~~~~~~~~~~~~~~~
D:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/examples/provisioning/sample_project/library/sht3x_sensor_/source/bee_Sht3x.c: At top level:
D:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/examples/provisioning/sample_project/library/sht3x_sensor_/source/bee_Sht3x.c:212:13: error: conflicting types for 'sht3x_send_command'; have '_Bool(sht3x_sensor_t *, uint16_t)' {aka '_Bool(sht3x_sensor_t *, short unsigned int)'}
  212 | static bool sht3x_send_command(sht3x_sensor_t *dev, uint16_t cmd)
      |             ^~~~~~~~~~~~~~~~~~
D:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.1/examples/provisioning/sample_project/library/sht3x_sensor_/source/bee_Sht3x.c:174:10: note: previous implicit declaration of 'sht3x_send_command' with type 'int()'
  174 |     if (!sht3x_send_command(dev, SHT3x_MEASURE_CMD[mode][repeat]))
      |          ^~~~~~~~~~~~~~~~~~
cc1.exe: some warnings being treated as errors
ninja: build stopped: subcommand failed.
